--- a/packages/plugin-youtube/statics/styles/youtube-api-input-modal.scss
+++ b/packages/plugin-youtube/statics/styles/youtube-api-input-modal.scss
@@ -1,19 +1,8 @@
 .modal_container {
- width: 100%;
- height: 100%;
- overflow: hidden;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.error_message_container {
-  text-align: center;
-  margin-top: calc(25% - 54px);
-}
-
-.spinner_container {
-  text-align: center;
-  margin-top: calc(25% - 54px);
-}
-
-.search_container{
-  
+.search_container {
 }
